--- a/packages/docs/src/pages/tokens/font-sizes.stories.mdx
+++ b/packages/docs/src/pages/tokens/font-sizes.stories.mdx
@@ -1,5 +1,5 @@
 import { Meta } from '@storybook/addon-docs'
-import { fontSizes } from '@ignite-ui/tokens'
+import { fontSizes } from '@luan-ignite-ui-ds/tokens'
 import { TokensGrid } from '../../components/TokensGrid'
 
 <Meta title="Tokens/Font Sizes" />
