--- a/packages/docs/src/pages/tokens/line-heigths.stories.mdx
+++ b/packages/docs/src/pages/tokens/line-heigths.stories.mdx
@@ -1,5 +1,5 @@
 import { Meta } from '@storybook/addon-docs'
-import { lineHeights } from '@ignite-ui/tokens'
+import { lineHeights } from '@luan-ignite-ui-ds/tokens'
 import { TokensGrid } from '../../components/TokensGrid'
 
 <Meta title="Tokens/Line Heigths" />
