--- a/packages/docs/src/pages/tokens/radii.stories.mdx
+++ b/packages/docs/src/pages/tokens/radii.stories.mdx
@@ -1,5 +1,5 @@
 import { Meta } from '@storybook/addon-docs'
-import { radii } from '@ignite-ui/tokens'
+import { radii } from '@luan-ignite-ui-ds/tokens'
 import { TokensGrid } from '../../components/TokensGrid'
 
 <Meta title="Tokens/Radii" />
